# newsletter-mining

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ICP.md  README.md  architecture.md  docker-compose.yml  package-lock.json  prd.md  produit.md  pyproject.toml
docs/marketing/: copy-pack-core-funnel-v1.md  evergreen-briefs-v1.md  seo-keywords-product-led-v1.csv
src/newsletter_mining/: __main__.py  analyzer.py  cli.py  clustering.py  config.py  embeddings.py  models.py  parser.py
web/: Dockerfile  app.config.ts  db-migrate.sh  docker-entrypoint.sh  drizzle.config.ts  nuxt.config.ts  package-lock.json  package.json  reset-auth-billing.sh  vitest.config.ts
web/app/: app.config.ts  app.vue
web/app/components/: ClusterBubbleChart.client.vue  ClusterCard.vue  SeverityBadge.vue  StatsCard.vue  TrendBadge.vue
web/app/composables/: useAppData.ts  useAuthSession.ts  useNewsletterSelection.ts
web/app/data/: audiences.ts
web/app/layouts/: default.vue
web/app/lib/: auth-client.ts
web/app/middleware/: auth.global.ts
web/app/pages/: for-consultants.vue  for-indie-hackers.vue  for-product-managers.vue  for-vcs.vue  index.vue  login.vue  privacy.vue  register.vue  settings.vue  terms.vue
web/app/plugins/: auth-client.ts  sse.client.ts
web/components/: ClusterCard.vue  ProblemCard.vue  SeverityBadge.vue
web/layouts/: default.vue
web/pages/: index.vue  settings.vue
web/pages/newsletters/: [id].vue  index.vue
web/server/api/: events.get.ts
web/server/database/: client.ts  index.ts  schema.ts
web/server/routes/: robots.txt.ts  sitemap.xml.ts
(+79 files in other folders)
